[gd_scene load_steps=2 format=3 uid="uid://rjwv76aid2mv"]

[ext_resource type="Script" path="res://control.gd" id="1_5kg1e"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 2.0
offset_right = -1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5kg1e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 83.0
offset_right = 1067.0
offset_bottom = 508.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "INGRESA  TU HOSTNAME
"
horizontal_alignment = 1

[node name="LineHost" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "INGRESA  EL CODIGO DE LA SALA
"
horizontal_alignment = 1

[node name="LineRoom" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="BtnAceptar" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "ACEPTAR"

[node name="BtnCancelar" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CANCELAR"
